--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <dependencies>
         <dependency>
             <groupId>com.sv</groupId>
-            <artifactId>matchpair</artifactId>
-            <version>1.0</version>
+            <artifactId>swing-ui</artifactId>
+            <version>2.0</version>
         </dependency>
     </dependencies>
 
