--- a/src/main/resources/game-configs/game-default.config
+++ b/src/main/resources/game-configs/game-default.config
@@ -1,9 +1,9 @@
 game-level=default
+match-score=1295
 rows=6
-cols=6
-color-1=255,0,0
-color-2=255,0,0
-color-3=255,0,0
-color-4=255,0,0
-color-5=255,0,0
-color-6=255,0,0
+cols=5
+color-1=red
+color-2=blue
+color-3=purple
+color-4=orange
+color-5=green
