--- a/src/main/resources/game-configs/game-level-1.config
+++ b/src/main/resources/game-configs/game-level-1.config
@@ -1,9 +1,9 @@
 game-level=1
-rows=6
+match-score=990
+rows=5
 cols=5
-color-1=255,0,0
-color-2=255,0,0
-color-3=255,0,0
-color-4=255,0,0
-color-5=255,0,0
-color-6=255,0,0
+color-1=red
+color-2=blue
+color-3=102,0,153
+color-4=orange
+color-5=green
