--- a/conf.config
+++ b/conf.config
@@ -1,4 +1,5 @@
-#Mon Nov 29 17:47:15 GMT 2021
+#Mon Nov 29 21:18:52 GMT 2021
 CNFIdx=3
 Username=Test
-AppFontSize=16
+GameBtnFontSize=40
+AppFontSize=14
