--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,6 @@
-#Mon Nov 29 21:18:52 GMT 2021
+#Tue Nov 30 13:58:10 GMT 2021
 CNFIdx=3
-Username=Test
+Usernames=Test
+Username=FillName
 GameBtnFontSize=40
-AppFontSize=14
+AppFontSize=16
