--- a/conf.config
+++ b/conf.config
@@ -1,6 +1,6 @@
-#Tue Nov 30 15:55:40 GMT 2021
+#Tue Nov 30 21:17:14 GMT 2021
 CNFIdx=3
 Usernames=Test
-Username=FillName
+Username=sv
 GameBtnFontSize=40
 AppFontSize=16
