--- a/conf.config
+++ b/conf.config
@@ -1,6 +1,5 @@
-#Tue Nov 30 21:17:14 GMT 2021
+#Wed Dec 01 10:11:01 GMT 2021
 CNFIdx=3
-Usernames=Test
-Username=sv
+Username=ganeshji
 GameBtnFontSize=40
 AppFontSize=16
