--- a/src/main/resources/scores.config
+++ b/src/main/resources/scores.config
@@ -1,4 +1,4 @@
-#Wed Dec 01 10:11:01 GMT 2021
+#Wed Dec 01 17:22:54 GMT 2021
 default-scores=4000|30-Nov-2021;5000|29-Nov-2021;2000|28-Nov-2021;
-ganeshji-scores=9445|01-Dec-2021;5560|01-Dec-2021;
+ganeshji-scores=5560|01-Dec-2021;12035|01-Dec-2021;9445|01-Dec-2021;5560|01-Dec-2021;
 sv-scores=5656|30-Nov-2021;5000|29-Nov-2021;6767|28-Nov-2021;
