--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Fri Dec 03 17:08:04 GMT 2021
+#Fri Dec 03 17:29:14 GMT 2021
 CNFIdx=0
-Username=ganeshji
+Username=Suryansh
 GameBtnFontSize=40
 AppFontSize=12
