--- a/src/main/resources/scores.config
+++ b/src/main/resources/scores.config
@@ -1,2 +1,3 @@
-#Fri Dec 03 17:08:04 GMT 2021
-ganeshji-scores=6550|03-Dec-2021|66|2;
+#Fri Dec 03 17:29:14 GMT 2021
+ganeshji-scores=22550|03-Dec-2021|66|2;
+Suryansh-scores=11350|03-Dec-2021|90|4;9445|03-Dec-2021|100|3;22395|03-Dec-2021|100|7;
