--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Sun Dec 05 13:00:11 GMT 2021
+#Sun Dec 05 19:30:09 GMT 2021
 CNFIdx=4
-Username=sv
+Username=SV
 GameBtnFontSize=40
 AppFontSize=18
