--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Mon Dec 06 20:25:05 GMT 2021
+#Tue Dec 07 13:25:58 GMT 2021
 CNFIdx=4
-Username=SV
+Username=Ss
 GameBtnFontSize=40
 AppFontSize=18
