--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.sv</groupId>
-            <artifactId>swing-ui</artifactId>
+            <artifactId>runcmd</artifactId>
             <version>2.0</version>
         </dependency>
     </dependencies>
