--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Tue Dec 07 13:27:17 GMT 2021
+#Tue Dec 07 22:11:48 GMT 2021
 CNFIdx=4
-Username=Ss
+Username=SV
 GameBtnFontSize=40
 AppFontSize=18
