--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Wed Dec 08 16:25:36 GMT 2021
+#Wed Dec 08 16:52:22 GMT 2021
 CNFIdx=3
-Username=SV
+Username=Shailendra
 GameBtnFontSize=40
 AppFontSize=18
