--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Wed Dec 08 21:37:34 GMT 2021
+#Wed Dec 08 21:53:34 GMT 2021
 CNFIdx=3
-Username=Shailendra
+Username=SV
 GameBtnFontSize=40
 AppFontSize=18
