--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,8 @@
-#Wed Dec 08 21:53:34 GMT 2021
+#Thu Dec 09 19:15:32 GMT 2021
 CNFIdx=3
 Username=SV
 GameBtnFontSize=40
+FirstPointOnBaseLine=false
 AppFontSize=18
+LinesJoinPoint=true
+DrawBaseLines=true
