--- a/conf.config
+++ b/conf.config
@@ -1,6 +1,7 @@
-#Thu Dec 09 21:14:23 GMT 2021
+#Thu Dec 09 22:15:26 GMT 2021
 CNFIdx=3
-Username=SV
+LineJoinsPointsCenter=false
+Username=Rachana
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
