update in graph styles

--- a/conf.config
+++ b/conf.config
@@ -1,6 +1,7 @@
-#Thu Dec 09 21:14:23 GMT 2021
-CNFIdx=3
-Username=SV
+#Fri Dec 10 19:24:40 GMT 2021
+CNFIdx=8
+LineJoinsPointsCenter=false
+Username=Suryansh
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
