update in graph styles

--- a/conf.config
+++ b/conf.config
@@ -1,8 +1,7 @@
-
-#Thu Dec 09 22:15:26 GMT 2021
-CNFIdx=3
-LineJoinsPointsCenter=false
-Username=Rachana
+#Fri Dec 10 21:47:29 GMT 2021
+CNFIdx=8
+LineJoinsPointsCenter=true
+Username=Suryansh
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
