--- a/conf.config
+++ b/conf.config
@@ -1,7 +1,7 @@
-#Sat Dec 11 13:43:21 GMT 2021
-CNFIdx=8
-LineJoinsPointsCenter=true
-Username=Suryansh
+#Sun Dec 12 10:25:41 GMT 2021
+CNFIdx=7
+LineJoinsPointsCenter=false
+Username=Ishika
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
