update for game progress

--- a/conf.config
+++ b/conf.config
@@ -1,7 +1,7 @@
-#Sun Dec 12 10:25:41 GMT 2021
+#Mon Dec 13 10:34:10 GMT 2021
 CNFIdx=7
-LineJoinsPointsCenter=false
-Username=Ishika
+LineJoinsPointsCenter=true
+Username=Shailendra
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
