update for game progress

--- a/conf.config
+++ b/conf.config
@@ -1,7 +1,7 @@
-#Mon Dec 13 10:34:10 GMT 2021
+#Mon Dec 13 10:54:58 GMT 2021
 CNFIdx=7
 LineJoinsPointsCenter=true
-Username=Shailendra
+Username=Test
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
