--- a/conf.config
+++ b/conf.config
@@ -1,7 +1,7 @@
-#Tue Dec 14 09:51:43 GMT 2021
+#Tue Dec 14 16:25:57 GMT 2021
 CNFIdx=10
 LineJoinsPointsCenter=true
-Username=Shailendra
+Username=Suryansh
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
