--- a/conf.config
+++ b/conf.config
@@ -1,7 +1,7 @@
-#Tue Dec 14 16:25:57 GMT 2021
+#Tue Dec 14 16:57:35 GMT 2021
 CNFIdx=10
 LineJoinsPointsCenter=true
-Username=Suryansh
+Username=Shailendra
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
