update for smileys and symbols

--- a/conf.config
+++ b/conf.config
@@ -1,4 +1,5 @@
-#Wed Dec 15 14:22:29 GMT 2021
+#Wed Dec 15 20:14:49 GMT 2021
+PairType=Smileys
 CNFIdx=4
 LineJoinsPointsCenter=true
 Username=Shailendra
