update for smileys and symbols matching

--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Thu Dec 16 11:01:36 GMT 2021
-PairType=Smileys
+#Thu Dec 16 15:56:18 GMT 2021
+PairType=Symbols
 CNFIdx=4
 LineJoinsPointsCenter=true
 Username=Shailendra
