update for app table

--- a/conf.config
+++ b/conf.config
@@ -1,5 +1,5 @@
-#Thu Dec 16 15:56:18 GMT 2021
-PairType=Symbols
+#Thu Dec 16 16:13:44 GMT 2021
+PairType=Smileys
 CNFIdx=4
 LineJoinsPointsCenter=true
 Username=Shailendra
