update for params

--- a/conf.config
+++ b/conf.config
@@ -1,9 +1,10 @@
-#Fri Dec 17 17:56:23 GMT 2021
+#Fri Dec 17 19:31:46 GMT 2021
 PairType=Smileys
 CNFIdx=4
 LineJoinsPointsCenter=true
-Username=Shailendra
+Username=Suryansh
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
 DrawBaseLines=true
+NoUserPwd=true
