--- a/conf.config
+++ b/conf.config
@@ -1,8 +1,8 @@
-#Fri Dec 17 19:31:46 GMT 2021
+#Sat Dec 18 15:06:56 GMT 2021
 PairType=Smileys
 CNFIdx=4
 LineJoinsPointsCenter=true
-Username=Suryansh
+Username=Shailendra
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
