--- a/conf.config
+++ b/conf.config
@@ -1,10 +1,10 @@
-#Sat Dec 18 15:06:56 GMT 2021
+#Thu Dec 23 11:57:18 GMT 2021
 PairType=Smileys
-CNFIdx=4
+CNFIdx=0
 LineJoinsPointsCenter=true
 Username=Shailendra
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
 DrawBaseLines=true
-NoUserPwd=true
+NoUserPwd=false
