--- a/conf.config
+++ b/conf.config
@@ -1,10 +1,10 @@
-#Wed Jan 05 16:01:11 GMT 2022
-PairType=Smileys
+#Thu May 12 16:57:04 BST 2022
+PairType=Chars
 CNFIdx=0
 LineJoinsPointsCenter=true
-Username=Shailendra
+Username=SV
 GameBtnFontSize=40
 FirstPointOnBaseLine=false
 AppFontSize=18
 DrawBaseLines=true
-NoUserPwd=false
+NoUserPwd=true
