--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>match-pair</artifactId>
+    <artifactId>times-table</artifactId>
     <version>1.0</version>
-    <name>Game match pair</name>
+    <name>Game math to practise times table</name>
 
     <dependencies>
         <dependency>
             <groupId>com.sv</groupId>
-            <artifactId>runcmd</artifactId>
+            <artifactId>swing-ui</artifactId>
             <version>2.0</version>
         </dependency>
     </dependencies>
